facet-styx/src/snapshots/facet_styx__schema_error__tests__validation_result_multiple_errors.snap
---
source: crates/facet-styx/src/schema_error.rs
expression: rendered
---
Error: type mismatch at 'name'
   ╭─[ test.styx:1:6 ]
   │
 1 │ name 123
   │      ─┬─  
   │       ╰─── expected string, got int
───╯
Error: unknown field 'unknown_field'
   ╭─[ test.styx:2:1 ]
   │
 2 │ unknown_field value
   │ ──────┬──────  
   │       ╰──────── not defined in schema
   │ 
   │ Note: valid fields: name, age
───╯
